# 42-call_me_maybe

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: unit_test_ci.yml
data/input/: function_calling_tests.json
documentation/: NOTIONS.md
src/: __main__.py
src/core/: constrained_decoder.py  generation_orchestrator.py  prompt_builder.py  vocab_manager.py
src/utils/: file_handler.py  file_to_json.py  parser.py  printer.py  validators.py
tests/: test_file_to_json.py  test_math_helpers.py
