[project]
name = "call_me_maybe"
version = "0.1.0"
description = "Introduction to function calling in LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.3",
	"llm-sdk",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
]

[tool.uv.sources]
llm-sdk = { path = "./llm_sdk" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
